--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,27 @@ edition = "2021"
 [dependencies]
 actix-web = "4"
 tokio = { version = "1", features = ["full"] }
-sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "macros", "migrate"] }
+
+sqlx = { version = "0.8.6", features = [
+            "runtime-tokio-native-tls",
+            "postgres",
+            "macros",
+            "uuid",
+            "chrono",
+            "migrate"
+] }
+
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 uuid = { version = "1", features = ["serde", "v4"] }
+chrono = { version = "0.4", features = ["serde"] }
 dotenvy = "0.15"
 eyre = "0.6"
 tracing-subscriber = "0.3"
+
+jsonwebtoken = { version = "10.1.0", features = ["rust_crypto"] }
+once_cell = "1"
+
+actix-cors = "0.7"
+futures-util = "0.3.31"
+# optional for global config/defaults
