--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ sqlx = { version = "0.8.6", features = [
             "macros",
             "uuid",
             "chrono",
-            "migrate"
+            "migrate",
+            "json"
 ] }
 
 serde = { version = "1.0", features = ["derive"] }
